allow-smtp-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: droniverse
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - identity-microservice
          - academy-microservice 
          - community-microservice
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0  # Allow TẤT CẢ kết nối outbound
